--- a/style.css
+++ b/style.css
@@ -174,39 +174,6 @@ select {
   width: 100%;
 }
 
-footer {
-  height: 160px;
-  width: auto;
-
-  background: #535971;
-  border-radius: 0px 0px 20px 20px;
-
-  display: flex;
-  flex-direction: column;
-
-  padding: 52px 71px;
-  margin-bottom: 100px;
-}
-
-footer .button {
-  width: 608px;
-  height: 56px;
-
-  background: #ffba53;
-  border-radius: 20px;
-
-  border: none;
-
-  font-family: 'Staatliches';
-  font-weight: 400;
-  font-size: 25px;
-  line-height: 26px;
-
-  color: #ffffff;
-
-  padding: 10px;
-}
-
 .contatoWpp {
   display: flex;
   justify-content: center;
@@ -230,18 +197,31 @@ footer .button {
   margin-left: 10px;
 }
 
+button {
+  align-items: center;
+  padding: 10px;
+  font-family: 'Staatliches';
+  font-size: 20px;
+  border-radius: 10px;
+
+  border: none;
+  color: white;
+  background-color: #ff8100;
+}
+
 @media (max-width: 600px) {
   body {
     background: #07d800;
   }
 
   .page {
+    height: 100vh;
     width: 100vw;
   }
 
   header {
     width: 350px;
-    margin: 77px 10px 26px;
+    margin: 20px 10px 20px;
   }
 
   header h1 {
@@ -259,7 +239,7 @@ footer .button {
   form {
     width: 100vw;
     padding: 40px 20px 0px 20px;
-    max-height: 700px;
+    height: 400px;
   }
 
   footer {
@@ -289,23 +269,32 @@ footer .button {
   }
 
   fieldset {
-    margin-bottom: 55px;
+    margin-bottom: 0px;
+  }
+
+  fieldset legend {
+    margin-bottom: 0;
+    padding-bottom: 5px;
+    border-bottom: none;
   }
 
   body::before {
-    content: url();
-    width: 100%;
-    height: 436px;
-
-    font-family: 'Poppins';
-
+    content: '';
+    width: 0;
+    height: 0;
     position: absolute;
-
     background: #07d800;
-    background-size: auto;
+  }
 
-    top: 0;
-    left: 0;
-    z-index: -1;
+  button {
+    align-items: center;
+    padding: 10px;
+    font-family: 'Staatliches';
+    font-size: 20px;
+    border-radius: 10px;
+
+    border: none;
+    color: white;
+    background-color: #ff8100;
   }
 }
