--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   font-family: 'Roboto', sans-serif;
   color: white;
 
-  max-height: 100vh;
+  min-height: 100vh;
 }
 
 header {
@@ -98,7 +98,7 @@ form button {
 
   font-size: 0.8rem;
   gap: 0.5rem;
-  padding: 0.5rem;
+  padding: 0.5rem 0.5rem;
 
   background-color: white;
   margin: 0 1rem 1rem;
@@ -111,5 +111,5 @@ form button {
 }
 
 .whatsapp img {
-  width: 2rem;
+  width: 1.5rem;
 }
