--- a/style.css
+++ b/style.css
@@ -131,3 +131,18 @@ form button:hover {
 footer {
   text-align: center;
 }
+
+.loading {
+  width: 2rem;
+  animation: spin 2s infinite linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
